minor fix, add swagger for sign-in
