# swagger.json
@@ -13,10 +13,10 @@
         "requestBody": {
           "description": "Create new user in the app",
           "content": {
-            "application/json": { "schema": { "$ref": "#/components/schemas/SignUpBody" } },
-            "application/xml": { "schema": { "$ref": "#/components/schemas/SignUpBody" } },
+            "application/json": { "schema": { "$ref": "#/components/schemas/AuthBody" } },
+            "application/xml": { "schema": { "$ref": "#/components/schemas/AuthBody" } },
             "application/x-www-form-urlencoded": {
-              "schema": { "$ref": "#/components/schemas/SignUpBody" }
+              "schema": { "$ref": "#/components/schemas/AuthBody" }
             }
           },
           "required": true
@@ -25,18 +25,47 @@
           "201": {
             "description": "User created successfully",
             "content": {
-              "application/json": { "schema": { "$ref": "#/components/schemas/SignUpBody" } }
+              "application/json": { "schema": { "$ref": "#/components/schemas/AuthBody" } }
             }
           },
           "403": { "description": "Incorect Data" },
           "422": { "description": "User already Exist" }
         }
       }
+    },
+    "/auth/sign-in": {
+      "get": {
+        "tags": ["Auth"],
+        "summary": "Sign in to the app",
+        "description": "Sign in to the app",
+        "operationId": "signIn",
+        "requestBody": {
+          "description": "Sign in to the app",
+          "content": {
+            "application/json": { "schema": { "$ref": "#/components/schemas/AuthBody" } },
+            "application/xml": { "schema": { "$ref": "#/components/schemas/AuthBody" } },
+            "application/x-www-form-urlencoded": {
+              "schema": { "$ref": "#/components/schemas/AuthBody" }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "User signed in successfully",
+            "content": {
+              "application/json": { "schema": { "$ref": "#/components/schemas/AuthBody" } }
+            }
+          },
+          "403": { "description": "Incorect Data" },
+          "404": { "description": "User not Found" }
+        }
+      }
     }
   },
   "components": {
     "schemas": {
-      "SignUpBody": {
+      "AuthBody": {
         "type": "object",
         "properties": {
           "email": { "type": "string", "example": "email@gmail.com" },
